Public API for Certificate Transparency

--- a/Configurations/descrip.mms.tmpl
+++ b/Configurations/descrip.mms.tmpl
@@ -50,15 +50,13 @@
   }
   my $sd1 = sourcedir("ssl","record");
   my $sd2 = sourcedir("ssl","statem");
-  $unified_info{before}->{"[.crypto.ct]ct_lib.OBJ"}
-      = $unified_info{before}->{"[.test]heartbeat_test.OBJ"}
+  $unified_info{before}->{"[.test]heartbeat_test.OBJ"}
       = $unified_info{before}->{"[.test]ssltest.OBJ"}
       = qq(record = F\$PARSE("$sd1","A.;",,,"SYNTAX_ONLY") - "A.;"
         define record 'record'
         statem = F\$PARSE("$sd2","A.;",,,"SYNTAX_ONLY") - "A.;"
         define statem 'statem');
-  $unified_info{after}->{"[.crypto.ct]ct_lib.OBJ"}
-      = $unified_info{after}->{"[.test]heartbeat_test.OBJ"}
+  $unified_info{after}->{"[.test]heartbeat_test.OBJ"}
       = $unified_info{after}->{"[.test]ssltest.OBJ"}
       = qq(deassign statem
         deassign record);
